# AgentStack_Analyst

./: LICENSE  README.md  database.sh
agstack/: .env.example  .gitignore  README.md  agentstack.json  db_reset.py  fastapi_server.py  pyproject.toml
agstack-frontend/frontend/: README.md  package-lock.json  package.json  tailwind.config.js
agstack-frontend/frontend/src/: App.jsx  index.css  theme.js
agstack-frontend/frontend/src/components/chat/: ChatMessage.jsx  ChatSidebar.jsx  ConnectedDatabases.jsx  ConnectionSelector.jsx  CreateChatModal.jsx  (+1 more)
agstack-frontend/frontend/src/pages/: ChatPage.jsx  ConnectionsPage.jsx
agstack-frontend/frontend/src/services/: api.js
agstack/src/: crew.py  main.py  run_generated_code.py
agstack/src/config/: agents.yaml  inputs.yaml  tasks.yaml
agstack/src/core/: database.py  db_init.py  db_reset_cascade.py
agstack/src/endpoints/: chat.py  connection.py
agstack/src/models/: chat.py  chat_message.py  column_details.py  database_connection.py  table_details.py
agstack/src/modules/: __init__.py  db_utils.py  file_utils.py
agstack/src/schemas/: chat.py  chat_message.py  column_details.py  database_connection.py  table_details.py
agstack/src/services/: chat_service.py  connection_service.py  database_service.py  db_utils.py
agstack/src/tools/: __init__.py
agstack/src/tools/code_executor/: __init__.py  config.json  execute_code.py
agstack/src/tools/execute_query/: __init__.py  config.json  execute_query.py
agstack/src/tools/write_df/: __init__.py  config.json  write_df.py
agstack/src/utils/: json_helper.py
(+11 files in other folders)
